fix!: issue with deserializing a response
- `Fields` type in the `Project`, `SourceString`, `File`, `Task`, and `User` structs has been changed from `map[string]any` to `any`.
This change may affect code that relies on the previous type.
- Update .golangci.yml to replace the deprecated 'exportloopref' linter with 'copyloopvar'.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -28,7 +28,7 @@ linters:
     - unparam
     - whitespace
     - bidichk
-    - exportloopref
+    - copyloopvar
     - goconst
     - reassign
     - goimports
